# aversion

./: .gitignore  Aversion Document.pages  CMakeLists.txt  IMPORTANT.txt  README.md  alternative.txt  count_lines.fish  org.txt  out.txt
assets/archetypes/: entities.json
assets/map/: arena.tmx  keep.txt  parseExample.txt  rule_map.tmx  rules.txt  tileset.tsx
include/components/: aiComponent.h  audioComponent.h  cameraComponent.h  colliderComponent.h  dialogueComponent.h  healthComponent.h  inputComponent.h  lightComponent.h  particleComponent.h  physicsComponent.h  renderComponent.h  spriteComponent.h  stateComponent.h  tag.h  transformComponent.h
include/core/: TMXParser.h  blackBoard.h  bt.h  ecs.h  game.h  jsonParser.h  map.h  renderer.h  tsuki.h  window.h
include/core/gameStates/: gameOverState.h  gameState.h  mainMenuState.h  pauseState.h  playState.h  transitionState.h
include/entities/: entityArchetype.h  entityManager.h
include/systems/: aiSystem.h  audioSystem.h  cameraSystem.h  collisionSystem.h  dialogueSystem.h  event.h  eventManager.h  healthSystem.h  inputSystem.h  lightSystem.h  physicsSystem.h  quadtree.h  renderSystem.h  spriteSystem.h  stateSystem.h
src/: main.cpp
src/components/: aiComponent.cpp  audioComponent.cpp  cameraComponent.cpp  colliderComponent.cpp  dialogueComponent.cpp  healthComponent.cpp  inputComponent.cpp  lightComponent.cpp  particleComponent.cpp  physicsComponent.cpp  renderComponent.cpp  spriteComponent.cpp  stateComponent.cpp  transformComponent.cpp
src/core/: TMXParser.cpp  blackBoard.cpp  bt.cpp  ecs.cpp  game.cpp  jsonParser.cpp  map.cpp  renderer.cpp  tsuki.cpp  window.cpp
src/entities/: entityArchetype.cpp  entityManager.cpp  playert.txt
src/scripts/: pup.lua  robot.lua
src/systems/: aiSystem.cpp  audioSystem.cpp  cameraSystem.cpp  collisionSystem.cpp  dialogueSystem.cpp  event.cpp  eventManager.cpp  healthSystem.cpp  inputSystem.cpp  lightSystem.cpp  physicsSystem.cpp  quadtree.cpp  renderSystem.cpp  spriteSystem.cpp  stateSystem.cpp
(+7 files in other folders)
